# MLWC

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  MANIFEST.in  README.md  a.out  dieltools.yaml  myenv.yaml  pytest.ini  recommend_cutoff.py  requirement.txt  requirements.txt  setup.cfg  show_traj.sh  test.cpp
.github/: dependabot.yml  labeler.yml
cpmd/: README.md  XDATCAR  XDATCAR.traj  extract_wfc.ipynb  read_cp_xyz.ipynb  script.py  script2.py  show_CP.py  show_CP_tmp.py  show_XDATCAR.py  show_XDATCAR_tmp.py  show_test.py  tmpnb_ngl.ipynb
docs/: README.md  conf.py  cptrain_train_io.py  getting-started_1.rst  getting-started_2.rst  getting-started_3.rst  index.rst  test.py  usage_guide.md
examples/: POSCAR  README.md
for_developer/notebook/c++/rdkit/: CMakeLists.txt  CMakeLists_success_imac.txt  example1.cpp  example2.cpp
for_developer/notebook/c++/rdkit/rdkit_library_test/: main.cpp
for_developer/notebook/c++/rdkit/rdkit_library_test/chemicalbond/: example3.cpp
for_developer/notebook/c++/tests/test1/: CMakeLists.txt  Test1_c++_bfs_orginal.cpp
for_developer/notebook/c++/tests/test3/: CMakeLists.txt
induced_dipole/: calc_eps_naphthalene_RESP_ASEver.ipynb  原子分極_並列.ipynb
notebook/: #density.xvg.1#  #md.log.1#  1204ETH_ml_result_figure.ipynb  20231207_acf_analysis_methanol.ipynb  20240322_MET_回転運動による吸収スペクトル.ipynb  CMakeLists.txt  ETHANOL_dipole_analysis_1030.ipynb  MD_NPT_密度の計算.ipynb  MEHANOL_dipole_analysis_1025.ipynb  MEHANOL_dipole_analysis_1025_visualize.ipynb  analysis_Olp.ipynb  analysis_WC_OH.ipynb  ase_get_distance.ipynb  density.xvg  em.edr  em.gro  em.tpr  em.trr  graph_implement.ipynb  init.gro  main.cpp  mdout.mdp  mixture.gro  notebook.ipynb  packmol.stdout  relax_0.gro  relax_1.gro  relax_10.gro  relax_11.gro  relax_2.gro  relax_3.gro  relax_4.gro  relax_5.gro  relax_6.gro  relax_7.gro  relax_8.gro  relax_9.gro  run.edr  run.gro  run.tpr  (+3 more)
notebook/c++/: #gromacs_30.xyz#  CMakeLists.txt  CMakeLists2.txt  atoms  atoms.cpp  atoms.hpp  atoms.ipynb  atoms_asign_wcs.cpp  atoms_core.cpp  atoms_core.hpp  atoms_graph.cpp  atoms_io.cpp  atoms_io.hpp  bondlist.txt  c++.ipynb  c++_debug1  c++_debug2.cpp  c++_debug_make_descripter  c++_debug_make_descripter.cpp  c++_debug_make_descripter_for_speedup.cpp  cmake_install.cmake  descripter.inp  descriptor.cpp  descriptor.hpp  include.cpp  include.hpp  libtorch_test.cpp  main.cpp  mol_core.cpp  mol_core.hpp  numpy_quiita.hpp  ohtaka  omp.x  parse.cpp  predict.cpp  predict.hpp  pytorch_c++.cpp  pytorch_convert_c++.ipynb  pytorch_convertmodel_c++.ipynb  test  (+2 more)
notebook/c++/202306014_model_rotate/: model_cc.pt  model_ch.pt  model_oh.pt
notebook/c++/20230629_model_rotate/: model_cc_weight4.pth  model_o.pt
notebook/c++/20230719_PG2_model_rotate_COC/: model_cc.pt
notebook/c++/20230719_PPG725_model_rotate/: model_cc.pt  model_ch.pt  model_o.pt  model_oh.pt
notebook/c++/20230720_PG2_model_rotate_COC/: model_coh.pt
notebook/c++/20230721_PG500K_model_rotate/: model_cc.pt  model_cc_weight.pth  model_ch_weight.pth  model_co.pt  model_oh.pt
notebook/c++/include/: CMakeLists.txt  manupilate_files.hpp  printvec.cpp  printvec.hpp  savevec.cpp  savevec.hpp
notebook/c++/rdkit/: CMakeLists.txt  README.md  ethane.mol  example3  example3.cpp
notebook/c++/rdkit/rdkit_library_test/: CMakeLists.txt
notebook/c++/rdkit/rdkit_library_test/chemicalbond/: CMakeLists.txt
notebook/c++/src/: #predict.cpp#  CMakeLists.txt  atoms.cpp  atoms_core.cpp  atoms_core.hpp  atoms_io.cpp  atoms_io.hpp  c++_debug_make_descripter.cpp  config.yaml  convert_gas.hpp  descriptor.cpp  descriptor.hpp  files.hpp  main.cpp  module_bond.cpp  module_bond.hpp  module_input.cpp  module_input.hpp  module_torch.cpp  module_torch.hpp  module_xyz.cpp  module_xyz.hpp  mol_core.cpp  mol_core.hpp  parse.cpp  parse.hpp  predict.cpp  predict.hpp
notebook/c++/src/chemicalbond/: CMakeLists.txt  mol_core.cpp  mol_core.hpp
notebook/c++/src/include/: CMakeLists.txt  error.h  manupilate_files.cpp  stopwatch.hpp  timer.hpp
notebook/c++/src/postprocess/: CMakeLists.txt  convert_gas.cpp  convert_gas.hpp  dielconst.cpp  dielconst.hpp  save_dipole.cpp  save_dipole.hpp
notebook/c++/src_old/: atoms_core.cpp
notebook/c++/test_result/: descs_ch0.npy  descs_ch3.npy  descs_ch5.npy  descs_ch7.npy  descs_ch8.npy  descs_co0.npy  descs_co2.npy  descs_co4.npy  descs_co5.npy  descs_co8.npy  descs_oh0.npy  descs_oh1.npy  descs_oh3.npy  descs_oh5.npy  descs_oh6.npy  descs_oh7.npy  test_atoms1.xyz  test_atoms4.xyz  test_atoms9.xyz
notebook/c++/tests/: README.md
notebook/c++/tests/test1/: README.md  Test1_c++_bfs.cpp
notebook/c++/tests/test2/: CMakeLists.txt  Test1_c++_bfs.cpp
notebook/c++/tests/test3/: 20230721_PG500K_model_rotate  descripter.inp  pg_gromacs.xyz
notebook/c++/tests/test_aseio/: .#test_aseio.cpp  CMakeLists.txt  IONS+CENTERS.xyz
notebook/c++/tests/test_vscode/: descriptor.inp
recipe/: meta.yaml  pyproject.toml  setup.cfg
script/: 1017_Wannier_ml_to_yamazaki.ipynb  ETHANOL_dipole_analysis_1003.ipynb  bulkjob_mergedata.py  cat_wcspread.sh  matplotlib_for_tikz.py  print_bondlist.py  vis_mol_bc.ipynb
smiles/: 14_26_gamma_M.csv  2-Methylpentane.csv  A2u_temp_dependent.csv  CH4.csv  Gamma_M_0_14.csv  Gamma_X_0_14.csv  Gamma_X_14_26.csv  Gamma_Z.csv  Gamma_Z_0_14.csv  Log_Im_epsilon_xx.csv  Log_Im_epsilon_xx_2.csv  Log_Im_epsilon_xx_300.csv  Log_Im_epsilon_xx_300_2.csv  Log_Im_epsilon_zz_2.csv  Log_Im_epsilon_zz_300.csv  Log_Im_epsilon_zz_300_2.csv  Log_im_epsilon_zz.csv  PG10.csv  PG17.csv  PG20.csv  PG25.csv  PG2_new.csv  PG3.csv  PG4.csv  PG6.csv  PG8.csv  PPG725.csv  README.md  R_2_30.csv  R_2_30_plot.csv  (+16 more)
src/cpp/chemicalbond/: CMakeLists.txt  mol_core.cpp  mol_core.hpp  mol_core_rdkit.cpp  mol_core_rdkit.hpp
src/cpp/include/: CMakeLists.txt  constant.cpp  constant.hpp  error.h  manupilate_files.cpp  manupilate_files.hpp  printvec.cpp  printvec.hpp  savevec.cpp  savevec.hpp  stopwatch.hpp  timer.hpp
src/cpp/postprocess/: CMakeLists.txt  convert_gas.cpp  convert_gas.hpp  dielconst.cpp  dielconst.hpp  save_dipole.cpp  save_dipole.hpp
(+3230 files in other folders)
