# metadataセクションではパッケージのメタデータを定義する
# version等、一部のキーはディレクティブの指定により外部ファイルから値を取得することができる
# https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[metadata]
name    = dieltools
# version = attr: __version__.__version__
version = 0.0.1
# version = attr: my_package.VERSION
author = Tomohito Amano, Tamio Yamazaki
author_email = tomohito.amano@phys.s.u-tokyo.ac.jp
description = dieltools 
long_description = file: README.md
long_description_content_type = text/markdown
# license = file : license.txt


# optionsセクションではパッケージの依存関係やpip installした時の動作を定義する
# 値が複数ある場合、インデントすることで1行に1つの値を書くことができる。
# https://setuptools.readthedocs.io/en/latest/setuptools.html#options
[options]
package_dir=
    =src
packages=find:
install_requires =
    numpy
    ase
    mdtraj
    nglview
    moviepy
    torch
    rdkit>=2023.03.1
    pyyaml
    statsmodels
    mpi4py
    torchinfo
    joblib==1.2.0
    matplotlib
include_package_data = True # これが必要！

[options.packages.find]
where=src

    
# optionの内、値のTypeがsectionのものは別セクションで記述する。
#[options.extras_require]
#develop =
#    dev_packageA
#    dev_packageB

[options.entry_points]
 console_scripts =
     CPextract.py = cmdline.CPextract:main
     CPmake.py    = cmdline.CPmake:main
     CPdescripter.py = cmdline.CPdescripter:main
     CPml.py = cmdline.CPml:main
     CPml_mpi.py = cmdline.CPml_mpi:main
     CPtrain.py = cmdline.CPtrain:main
     ml_predict.py   = cmdline.ml_predict:main
     nose_mass.py = cmdline.nose_mass:main 
     make_alm.py  = cmdline.make_alm:main
     
     
# gui_scripts =
#     bar = gui_package_name.gui_module_name:gui_func_name


